package com.example.config;

public class ErrorMessages {
    public static final String USER_NOT_FOUND = "User not found.";
    public static final String PHONE_NOT_FOUND = "Phone not found.";
    public static final String INVALID_DATA_PHONE = "Invalid phone.";
    public static final String INVALID_DATA_EMAIL = "Invalid email.";
    public static final String INVALID_DATA_PASSWORD = "Invalid password.";
    // Otros mensajes...
}